# MCP-Activecampaign

./: .gitignore  README.md  devto_draft.md  glama.json  mcpize.yaml  pyproject.toml  smithery.yaml
.actor/: Dockerfile  actor.json  input_schema.json
mcp_activecampaign/: __init__.py  __main__.py  client.py  server.py
