[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-activecampaign"
version = "0.2.0"
description = "Production-grade MCP server for the ActiveCampaign API — 51 tools for contacts, deals, automations, tags, pipelines, campaigns, notes, tasks, event tracking, ecommerce, and bulk operations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Alex LaGuardia", email = "alex@alexlaguardia.dev" }]
keywords = ["mcp", "activecampaign", "crm", "email-marketing", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/AlexlaGuardia/mcp-activecampaign"
Repository = "https://github.com/AlexlaGuardia/mcp-activecampaign"
Issues = "https://github.com/AlexlaGuardia/mcp-activecampaign/issues"

[project.scripts]
mcp-activecampaign = "mcp_activecampaign.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_activecampaign"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
